<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android3717Project1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_grid_view">ImageGridViewActivity</string>
    <string name="title_activity_image_swipe_view">ImageSwipeViewActivity</string>
    <string name="title_activity_start_image_grid_view">StartImageGridViewActivity</string>

    <!-- LoginActivity Strings -->
    <string name="btn_myAccount">My Account</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_random">Random Pets!</string>
    <string name="btn_week">Pet of the Week</string>
    <string name="btn_search">Search</string>
    <string name="btn_imgUpload">Upload Image</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- SearchActivity strings -->
    <string name="title_activity_search">Search for Pets</string>
    <string name="search_tags_label_activity_search">Filter Images by Image Tags:</string>
    <string name="uploader_search_edit_text_label_activity_search">Filter Images by Uploader Name:</string>
    <string name="uploader_search_edit_text_activity_search">Uploader Name</string>
    <string name="search_button_activity_search">Search</string>
    <string name="reset_button_activity_search">Reset</string>

    <!-- Networking -->
    <string name="zero_results">No Results</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="server_error">Server Error</string>
    <string name="not_found">Address not Found</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="title_activity_image_upload">ImageUpload</string>
    <string name="title_activity_account_creation">AccountCreation</string>

</resources>
