<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <ImageView
        android:id="@+id/bannerImage"
        android:src="@drawable/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="100dip" />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bannerImage"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btn_random"
        android:text="@string/btn_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:gravity="center"
        android:onClick="TemporaryButton"
        />

    <Button
    android:id="@+id/btn_week"
    android:text="@string/btn_week"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/btn_random"
    android:gravity="center" />

    <Button
        android:id="@+id/btn_search"
        android:text="@string/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_week"
        android:gravity="center" />

</RelativeLayout>
